# request

./: .gitignore  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml  test.yml
src/: App.vue  aceEditor.ts  codeGenerator.ts  header.ts  main.ts  navbarButtons.ts  notification.ts  queryParameter.ts  request.ts  requestDom.ts  responseButtons.ts  save.ts  store.ts  style.css  style.scss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: i18n.rs  main.rs  menu.rs  request.rs  save.rs
src/components/: CodeGenerator.vue  HelloWorld.vue  MainNavbar.vue  MainSidebar.vue  Request.vue  RequestBody.vue  RequestHeaders.vue  RequestNavbar.vue  RequestQueryParameters.vue  RequestSidebar.vue  Response.vue  ResponseBody.vue  ResponseHeaders.vue  Save.vue  SaveFolder.vue  Saves.vue  SavesFolders.vue  Settings.vue
src/helpers/: codeGenerators.ts  objectFormatter.ts  storeManager.ts
src/notify/: index.ts  types.ts
src/types/: Request.ts
